--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.detail.DetailActivity" />
+        <activity android:name=".view.teamdetail.TeamDetailActivity" />
     </application>
 
 </manifest>
