--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".view.detail.DetailActivity" />
         <activity android:name=".view.teamdetail.TeamDetailActivity" />
+        <activity android:name=".view.playerdetail.PlayerDetailActivity"></activity>
     </application>
 
 </manifest>
