--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity android:name=".view.detail.DetailActivity" />
         <activity android:name=".view.teamdetail.TeamDetailActivity" />
         <activity android:name=".view.playerdetail.PlayerDetailActivity" />
-        <activity android:name=".view.searchmatch.SearchMatchActivity" />
+        <activity android:name=".view.searchmatch.SearchActivity" />
     </application>
 
 </manifest>
